
Changes for next release:
* switch DTD to HTML 4.0.1 Transitional
* cleanup generated HTML code

Changes for release 1.1.0 (October 31, 2017):
* enable warnings (perl -w)
* fix warnings
* enable taint mode (perl -T)
* fixes for taint mode
  based on work by MarkIrons
* fixed bug UnusedVariableDeclaration
  fix contributed by JuanMtnezPineda
* fixed bug PwlistArray
  fix contributed by JuanMtnezPineda
* remove unused variables

Changes for bugfix release 1.0.6 (November 05, 2016):

* fixed bug CookieIgnored
* fixed bug CGIStartformAndEndform
* fixed bug SkipMigratingParameterLock
  based on fix by GyPark

Changes for bugfix release 1.0.5 (August 28, 2009):

* added patch RssLinkInHeader (but only for normal pages)
  contributed by UngarPeter
* added patch DoPageLockMinorTweak
  contributed by JuanMtnezPineda
* Allow "0" as page name if FreeLinks are allowed
* fixed bug NumericDatesNeedZeroPadding
  fix contributed by GunnarH
* fixed bug ExtraBRAtDoBackLinks
  fix contributed by JuanMtnezPineda
* fixed bug TTatDoEditBanned
  fix contributed by JuanMtnezPineda
* fixed bug NonEnglishRSS
  fixes contributed by GunnarH

Changes for bugfix release 1.0.4 (December 1, 2007):

* fixed bug NoDisplayFooterInActionLink
  fix contributed by JuanMtnezPineda
* QuoteHtml, GetPageLockLink, GetAdminBar: move function to allow defered
  compilation again
* fixed bug: make GotoBars at top and bottom look the same on the edit page
* added some missing ScriptLinkChar() instead of "?"
* updated barnesandnoble.com search URL

Changes for bugfix release 1.0.3 (September 12, 2007):

* fixed bug IntermapedGifNotInlinedForLink
* fixed bug AuthenicationFailedNoHeader
* fixed bug BacklinksMissesSomeFreeLinks
  fix contributed by BrianHunter
* fixed bug EmptyTableElements
  fix contributed by StefanTrcek
* fixed bug MiscTranslation
  fix contributed by JuanMtnezPineda
* added more translation strings
* DoRC: when using rcidonly text was quoted too much